[package]
name = "hell"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/charlesrocket/hell"
authors = ["charlesrocket"]
readme = "README.md"

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
